# nukex4

./: .gitignore  .mcp.json  CHANGELOG.md  CMakeLists.txt
cmake/: PCLConfig.cmake  PackageAndSign.cmake
docs/specs/: NUKEX_MASTER_SPEC.md  nukex_additions_spec.md
docs/superpowers/plans/: 2026-03-29-phase1-scaffolding-and-core.md  2026-03-29-phase2-lib-io.md  2026-03-29-phase3-lib-alignment.md  2026-03-30-phase4a-core-updates-and-fitting.md  2026-03-31-phase4b-classify-and-combine.md  2026-03-31-phase4c-stacker-and-cache.md  2026-03-31-phase5a-stretch-infra-and-tier3.md  2026-04-07-progress-observer.md  2026-04-19-phase7-closeout-plan.md  2026-04-19-phase7-perf-findings.md  (+2 more)
repository/: updates.xri
src/lib/alignment/: CMakeLists.txt
src/lib/alignment/include/nukex/alignment/: frame_aligner.hpp  homography.hpp  star_detector.hpp  star_matcher.hpp  types.hpp
src/lib/alignment/src/: frame_aligner.cpp  homography.cpp  star_detector.cpp  star_matcher.cpp
src/lib/classify/: CMakeLists.txt
src/lib/classify/include/nukex/classify/: weight_computer.hpp
src/lib/classify/src/: weight_computer.cpp
src/lib/combine/: CMakeLists.txt
src/lib/combine/include/nukex/combine/: output_assembler.hpp  pixel_selector.hpp  spatial_context.hpp
src/lib/combine/src/: output_assembler.cpp  pixel_selector.cpp  spatial_context.cpp
src/lib/core/: CMakeLists.txt
src/lib/core/include/nukex/: core.hpp
src/lib/core/include/nukex/core/: channel_config.hpp  core.hpp  cube.hpp  distribution.hpp  frame_metadata.hpp  frame_stats.hpp  histogram.hpp  progress_observer.hpp  reservoir.hpp  types.hpp  voxel.hpp  welford.hpp
src/lib/core/src/: channel_config.cpp  cube.cpp
src/lib/fitting/: CMakeLists.txt
src/lib/fitting/include/nukex/fitting/: contamination_fitter.hpp  curve_fitter.hpp  gmm_fitter.hpp  kde_fitter.hpp  model_selector.hpp  robust_stats.hpp  student_t_fitter.hpp
src/lib/fitting/src/: contamination_fitter.cpp  gmm_fitter.cpp  kde_fitter.cpp  model_selector.cpp  robust_stats.cpp  student_t_fitter.cpp
src/lib/gpu/: CMakeLists.txt  generate_embedded_kernels.cmake
src/lib/gpu/include/nukex/gpu/: fit_heartbeat.hpp  gpu_config.hpp  gpu_context.hpp  gpu_cpu_fallback.hpp  gpu_executor.hpp  gpu_kernels.hpp  gpu_shadow_buffers.hpp
src/lib/gpu/kernels/: classify_weights.cl  common.cl  robust_stats.cl  select_pixels.cl  spatial_context.cl
src/lib/gpu/src/: fit_heartbeat.cpp  gpu_context.cpp  gpu_cpu_fallback.cpp  gpu_executor.cpp  gpu_kernels.cpp  gpu_shadow_buffers.cpp
src/lib/io/: CMakeLists.txt
src/lib/io/include/nukex/io/: debayer.hpp  fits_reader.hpp  flat_calibration.hpp  image.hpp
src/lib/io/src/: debayer.cpp  fits_reader.cpp  flat_calibration.cpp  image.cpp
src/lib/learning/: CMakeLists.txt
src/lib/learning/include/nukex/learning/: atomic_write.hpp  rating_db.hpp  ridge_regression.hpp  train_model.hpp
src/lib/learning/src/: atomic_write.cpp  rating_db.cpp  ridge_regression.cpp  train_model.cpp
src/lib/stacker/: CMakeLists.txt
src/lib/stacker/include/nukex/stacker/: frame_cache.hpp  stacking_engine.hpp
src/lib/stacker/src/: frame_cache.cpp  stacking_engine.cpp
src/lib/stretch/: CMakeLists.txt
src/lib/stretch/include/nukex/stretch/: arcsinh_stretch.hpp  clahe_stretch.hpp  ghs_stretch.hpp  image_stats.hpp  layer_loader.hpp  log_stretch.hpp  lupton_stretch.hpp  mtf_stretch.hpp  ots_stretch.hpp  param_model.hpp  photometric_stretch.hpp  rnc_stretch.hpp  sas_stretch.hpp  stretch_op.hpp  stretch_pipeline.hpp  stretch_utils.hpp  veralux_stretch.hpp
src/lib/stretch/src/: arcsinh_stretch.cpp  clahe_stretch.cpp  ghs_stretch.cpp  image_stats.cpp  layer_loader.cpp  log_stretch.cpp  lupton_stretch.cpp  mtf_stretch.cpp  ots_stretch.cpp  param_model.cpp  photometric_stretch.cpp  rnc_stretch.cpp  sas_stretch.cpp  stretch_pipeline.cpp  stretch_utils.cpp  veralux_stretch.cpp
src/module/: CMakeLists.txt  NukeXInstance.cpp  NukeXInstance.h  NukeXInterface.cpp  NukeXInterface.h  NukeXModule.cpp  NukeXModule.h  NukeXParameters.cpp  NukeXParameters.h  NukeXProcess.cpp  NukeXProcess.h  NukeXProgress.cpp  NukeXProgress.h  NukeXVersion.h  RatingDialog.cpp  RatingDialog.h  filter_classifier.cpp  filter_classifier.hpp  fits_metadata.cpp  fits_metadata.hpp  stretch_auto_selector.cpp  stretch_auto_selector.hpp  stretch_factory.cpp  stretch_factory.hpp
test/: CMakeLists.txt
test/fixtures/: e2e_manifest.json  phaseB_baseline_ms.txt
test/fixtures/golden/: lrgb_mono_ngc7635.json
test/unit/alignment/: test_alignment_diag.cpp  test_frame_aligner.cpp  test_homography.cpp  test_star_detector.cpp
test/unit/classify/: test_weight_computer.cpp
test/unit/combine/: test_output_assembler.cpp  test_pixel_selector.cpp  test_spatial_context.cpp
test/unit/core/: test_channel_config.cpp  test_cube.cpp  test_distribution.cpp  test_histogram.cpp  test_reservoir.cpp  test_voxel.cpp  test_welford.cpp
test/unit/fitting/: test_contamination_fitter.cpp  test_gmm_fitter.cpp  test_kde_fitter.cpp  test_model_selector.cpp  test_robust_stats.cpp  test_student_t_fitter.cpp
test/unit/gpu/: test_fit_heartbeat.cpp  test_gpu_agreement.cpp  test_gpu_context.cpp  test_gpu_cpu_fallback.cpp  test_gpu_kernels.cpp
test/unit/io/: test_debayer.cpp  test_fits_reader.cpp  test_flat_calibration.cpp  test_image.cpp
test/unit/learning/: test_atomic_write.cpp  test_rating_db.cpp  test_ridge_regression.cpp  test_train_model.cpp
test/unit/module/: test_filter_classifier.cpp  test_fits_metadata.cpp  test_phase8_fallback.cpp  test_stretch_auto_selector.cpp  test_stretch_factory.cpp
test/unit/stacker/: test_frame_cache.cpp  test_stacking_engine.cpp
test/unit/stretch/: test_arcsinh.cpp  test_calibrate.cpp  test_ghs.cpp  test_image_stats.cpp  test_layer_loader.cpp  test_log.cpp  test_mtf.cpp  test_ots.cpp  test_param_bounds.cpp  test_param_model.cpp  test_rnc.cpp  test_sas.cpp  test_stretch_pipeline.cpp  test_tier1.cpp
test/util/: png_writer.cpp  png_writer.hpp  test_data_loader.cpp  test_data_loader.hpp
tools/: capture_baseline.js  release.sh  run_e2e.sh  validate_e2e.js
(+6 files in other folders)
